--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>Document</title>
+    <title>CSS BAR</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
     <div class="tabs">
-        <input id="home" type="radio" name="tabsMenu">
+        <input id="home" type="radio" name="tabsMenu" checked>
         <input id="profile" type="radio" name="tabsMenu">
         <input id="likes" type="radio" name="tabsMenu">
         <input id="settings" type="radio" name="tabsMenu">
@@ -20,6 +20,7 @@
             <label for="likes"><i class="fa-solid fa-heart"></i></label>
             <label for="settings"><i class="fa-solid fa-gear"></i></label>
             <label for="notifications"><i class="fa-solid fa-bell"></i></label>
+            <div class="underline"></div>
         </div>
     </div>
     
